# outside-agent

./: .gitignore  README.md  README_GOVERNANCE.md  check_policy_dir.py  run_api_smoke.py  run_batch_smoke.py  run_cli_smoke.py  run_path_robustness.py  run_smoke_subset.py  run_unit_tests.py  smoke_api.py  verify_env.py
docs/: THREAT_MODEL.md
examples/: end_to_end_example.py  test_jailbreak_prevention.py
gating/examples/: audit_report_sample.json  metrics_sample.json
gating/interfaces/: audit_report.schema.json  gating_contract.md  metrics.schema.json
gating/specs/: decision_matrix.md  metrics_spec.md  postcheck_spec.md  retry_fail_strategy.md
governance_core/: __init__.py  audit_logger.py  cli.py  data_profiles.py  governance_agent.py  llm_provider.py  requirements.txt  rule_engine.py
governance_core/metrics/: __init__.py  privacy_risk.py  semantic_invariants.py  statistical_fidelity.py  utility_preservation.py
leakage_agent/: API_REFERENCE.md  CONFIGURATION.md  README.md  TROUBLESHOOTING.md  pyproject.toml
leakage_agent/examples/: basic_usage.py  ml_workflow_example.py
leakage_agent/src/leakage_agent/: __init__.py  api.py  batch_processor.py  canonicalize.py  cli.py  config_loader.py  decision.py  forbidden_scan.py  io_utils.py  lineage.py  metrics.py  normalize.py  orchestrator.py  pipeline.py  postcheck.py  reporting.py  transform_engine.py
leakage_agent/tests/: test_api.py  test_batch.py  test_metrics.py  test_pipeline.py
policy/: README.md
transform/examples/: batch1.csv  batch2.csv  candidate_input_sample.csv  cleaned_output_sample.csv  (+1 more)
(+13 files in other folders)
